# ForgeLoopAI

./: .gitignore  README.md  THINKING.md  forgeloop.local.example.json  knowledge.md  pyproject.toml
docs/: blog-forgeloopai-intro.md  commands.md  ui-design-v0.1.md
examples/: doris_lakehouse_best_practice.json  doris_lakehouse_best_practice_run.md
forgeloop/: cli.py  models.py  project_ops.py  storage.py
forgeloopai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
projects/doris-lakehouse/: commands.json  feature.json  policy.json  project.json  prompt.md  rounds.jsonl
runtime/projects/3-doris-work-2/: config.json
runtime/projects/3-doris-work-2/scripts/: send.py  stage1_build.sh  stage2_stop.sh  stage3_clean.sh  stage4_deploy.sh  stage5_check.sh  stage6_test.sh  stage7_verify.sh
runtime/projects/3-doris-work-2/scripts/sql/: a1_append_single_part.sql  overwrite_test_append_multi_part_full_overwrite.sql  overwrite_test_append_multi_part_spec_overwrite.sql  overwrite_test_append_multi_part_spec_overwrite_with_dirty.sql  overwrite_test_append_multi_part_spec_overwrite_with_dynamic.sql  overwrite_test_append_single_part_full_overwrite.sql  overwrite_test_no_op.sql  skip_case.sql
