[project]
name = "forgeloopai"
version = "1.0.0"
description = "ForgeLoopAI v1.0 - A minimal context and prompt manager for IDE Agents (like Trae Solo Coder)"
requires-python = ">=3.7"

[project.scripts]
forgeloop = "forgeloop.cli:main"

[tool.setuptools.packages.find]
include = ["forgeloop*"]
exclude = ["runtime*", "projects*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
